<resources>
	<string name="app_name">Morse闪识</string>
	<string name="start_flash">开始</string>
	<string name="stop_flash">停止</string>
	<string name="text_header_input_morse">识别出的摩尔斯码</string>
	<string name="text_header_input_text">输入需要编码的字符</string>
	<string name="text_morse_output_text">摩尔斯码</string>
    <string name ="text_header_to_string">识别出的字符</string>
	<string name="text_header_output_text">Text</string>
	<string name="text_header_output_morse">识别出的摩尔斯码</string>
	<string name="title">Morse Encoder/Decoder</string>
	<string name="threshold_set">保存识别参数</string>
	<string name="send_set">保存特征参数</string>

	<string name="threshold_dot">点阈值</string>
	<string name="threshold_letters">字母阈值</string>
	<string name="threshold_words">单词阈值</string>
	<string name="threshold_brightness">亮度阈值</string>
	<string name="conf_morseTextView">识别参数配置</string>
	<string name="conf_tomorseTextView">特征参数配置</string>
	<string name="speed">单位时间长度</string>
	<string name="auto_threshold">自适应阈值</string>

	<string name="action_settings">Settings</string>
	<string name="info_morse_code_map">
		国际标准莫尔斯码表

		\n1. 1 dot 长度为一个单位时间
		\n2. 1 dash 长度为三个单位时间
		\n3. 1 字母之间 长度为3个单位时间  .
		\n4. 单词之间空7个单位时间

		\n\n字母:
		\nA: .-
		\nB: -...
		\nC: -.-.
		\nD: -..
		\nE: .
		\nF: ..-.
		\nG: --.
		\nH: ....
		\nI: ..
		\nJ: .---
		\nK: -.-
		\nL: .-..
		\nM: --
		\nN: -.
		\nO: ---
		\nP: .--.
		\nQ: --.-
		\nR: .-.
		\nS: ...
		\nT: -
		\nU: ..-
		\nV: ...-
		\nW: .--
		\nX: -..-
		\nY: -.--
		\nZ: --..


		\n\n数字:
		\n1: .----
		\n2: ..---
		\n3: ...--
		\n4: ....-
		\n5: .....
		\n6: -....
		\n7: --...
		\n8: ---..
		\n9: ----.
		\n0: -----
	</string>

	<string name="info_about_us">

        \n  Morse闪识
		\n  如果你有任意建议\n
		\n
		\n   				联系我们
		\n   Email  1063994955@qq.com
		\n  ++++++++++++++++++++++++++++++
		\n  +++++++++++++©版权所有++++++
		\n  ++++++++++++++++++++++++++++++
		\n\n
	</string>


</resources>
